--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/aviation4/Tip-calculator#readme",
   "devDependencies": {
+    "parcel": "^2.3.1",
     "sass": "^1.49.0"
-  },
-  "dependencies": {
-    "http-server": "^14.1.0"
   }
 }
