--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "tip-calculator",
   "version": "1.0.0",
   "description": "- [Summary](#summary)\r - [Usage](#usage)\r - [Built with](#built-with)\r - [Live website](#live-website)\r - [More insights](#more-insights)",
-  "main": "index.html",
-  "directories": {
+  "source": "index.html",
+    "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
